Implemented spocs and database for revenue model
